components/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
  - name: minio-api
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: minio-console
    port: 9001
    targetPort: 9001
    protocol: TCP
  type: ClusterIP
