components/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  labels:
    app: minio
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/backend-protocol: HTTP
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: minio.192.168.1.23.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9001
